# arduino-mock

./: .gitignore  .gitmodules  .travis.yml  Arduino.h  CMakeLists.txt  LICENSE  Makefile  README.md  Serial.cpp  Spark.cpp  Spark.h  Stream.h  Wire.h  arduino.cpp  build.sh  external-project-utils.cmake  get-external-project.cmake
include/: Arduino.h  Client.h  IPAddress.h  OneWire.h  Print.h  Printable.h  RedBot.h  Serial.h  SoftwareSerial.h  WString.h  WiFiNINA.h  Wire.h
include/arduino-mock/: Arduino.h  AvrDefines.h  IRremote.h  Print.h  SPI.h  Serial.h  SoftwareSerial.h  Spark.h  Stream.h  WiFi.h  Wire.h  arduino.h  eeprom.h  serial.h  serialHelper.h  spark.h  wifi.h  wire.h
lib/gmock/: CMakeLists.txt
lib/gtest/: CMakeLists.txt
make/: Makefile
script/: codeformatter.sh  travis_format_checcker.sh
src/: Arduino.cc  ArduinoMockAll.cc  EEPROM.cc  IPAddress.cpp  OneWire.cc  Print.cc  Redbot.cc  SPI.cc  Serial.cc  SoftwareSerial.cc  Spark.cc  WString.cpp  WiFi.cc  WiFiNINA.cc  Wire.cc  arduino.cc  eeprom.cc  serial.cc  spark.cc  wifi.cc  wire.cc
test/: Arduino_unittest.cc  CMakeLists.txt  DigitalReadSerial.ino  DigitalReadSerial_unittest.cc  EEPROM_unittest.cc  Makefile  SPI_unittest.cc  Serial_unittest.cc  Spark_unittest.cc  Stream_unittest.cc  WiFiNINA_unittest.cc  WiFi_unittest.cc  Wire_unittest.cc  arduino_unittest.cc  eeprom_unittest.cc  serialHelper_unittest.cc  serial_unittest.cc  spark_unittest.cc  test_all.cc  wifi_unittest.cc  wire_unittest.cc
